[package]
name = "test"
version = "0.5.0"
authors = [ "zo-el <joelulahanna@gmail.com>", "jetttech <lisa.jetton@holo.host>" ]
edition = "2021"

[lib]
name = "test"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
hdk = "=0.0.157"
serde = "1.0.139"
thiserror = "1.0.22"
paste = "1.0.5"
test_integrity ={ path = "../test-integrity" }
