[package]
name = "test"
version = "0.5.1"
authors = [ "zo-el <joelulahanna@gmail.com>", "jetttech <lisa.jetton@holo.host>" ]
edition = "2021"

[lib]
name = "test"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
hdk = "=0.2.2-beta-rc.0"
serde = "1.0"
thiserror = "1.0.22"
test_integrity ={ path = "../test-integrity" }
