[package]
name = "test"
version = "0.7.0"
authors = [ "zo-el <joelulahanna@gmail.com>", "jetttech <lisa.jetton@holo.host>" ]
edition = "2021"

[lib]
name = "test"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
thiserror = "1.0.22"
test_integrity ={ path = "../test-integrity" }
